Sat Feb 14 13:14:18 2009  TAKANO Mitsuhiro (takano32)  <tak@no32.tk>

	* iseq.c: remove nil parameter from Proc#parameters
	  after rest appeared.

Sat Feb 14 07:23:52 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* string.c (rb_external_str_new_with_enc): change evaluatioin order
	  for speed.

Sat Feb 14 02:20:04 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/sockport.h (SET_SA_LEN): cast to void for supressing a
	  warning.

Fri Feb 13 23:37:10 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/dl/win32/lib/Win32API.rb (Win32API#initialize): DL.dlopen
	  raises DLError.

Fri Feb 13 21:13:19 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/socket.c (Init_socket): define TCPServer#listen and
	  UNIXServer#listen here for rdoc.

Fri Feb 13 20:59:48 2009  Tanaka Akira  <akr@fsij.org>

	* ext/socket/ancdata.c (extract_ipv6_pktinfo): set sa_len for 4.4BSD.

Fri Feb 13 15:34:18 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* iseq.c (simple_default_value): removed.  default values of optional
	  parameters are not available still now.  [ruby-dev:37980]

Fri Feb 13 15:11:11 2009  Koichi Sasada  <ko1@atdot.net>

	* vm_eval.c (eval_string_with_cref): use rb_vm_get_ruby_level_next_cfp() 
	  instead of vm_get_ruby_level_caller_cfp().  checking a upper frame
	  is not enough.  [ruby-dev:37984]

	* proc.c, vm_core.h: declare rb_vm_get_ruby_level_next_cfp()
	  on vm_core.h.

Fri Feb 13 15:01:40 2009  Koichi Sasada  <ko1@atdot.net>

	* cont.c (rb_fiber_alive_p): fix to return true instead of 0.
	  [ruby-dev:37991]

	* test/ruby/test_fiber.rb: add a test for Fiber#alive?

Fri Feb 13 09:43:19 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (ac_cv_func_flock): using flock defined in
	  win32/win32.c on mingw.

Fri Feb 13 01:45:17 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* compile.c (iseq_set_sequence, compile_dstr_fragments),
	  (iseq_compile_each): hides other internal objects.

	* compile.c (iseq_compile_each): just freeze xstr.
